# valdisere2026

./: .gitignore  Standup results - Sheet4.csv  Standup results.ods  Standup1 Results  - BP.csv  Standup1 Results  - CGI-I.csv  Standup1 Results  - MEQ.csv  Standup1.html  Standup1.txt  analyze_dates.py  batch_anonymize.py  executive-summary.org  results1.html  results2.html  results3.html  results4.html  standup2.txt  video_app.py
standup-web/: app.js  index.html  style.css
standup-web/assets/: standup_results_bp.csv
valdisere-presentation/: Cargo.toml  Dioxus.toml  input.css  package-lock.json  package.json  process_data.py
valdisere-presentation/assets/: standup_data.json  standup_results.csv  standup_results_cgi.csv  tailwind.css
valdisere-presentation/src/: main.rs
valdisere-presentation/src/components/: mod.rs  navbar.rs  slide_deck.rs
valdisere-presentation/src/slides/: background.rs  discussion.rs  future.rs  intro.rs  methods.rs  mod.rs  motivation.rs  physiology.rs  rationale.rs  results.rs  standup1.rs  standup2.rs  standup3.rs  video.rs
