[package]
name = "valdisere-presentation"
version = "0.1.0"
authors = ["arcot"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
gloo-events = "0.2.0"
gloo-timers = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["Window", "Document", "KeyboardEvent", "console"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
